# substreams-aptos-stats

./: Cargo.toml  Makefile  README.md  substreams.yaml
proto/: stats.proto
src/: lib.rs
src/pb/: aptos.extractor.v1.rs  aptos.stats.v1.rs  aptos.util.timestamp.rs  mod.rs  sf.aptos.type.v1.rs  sf.substreams.v1.rs
