[package]
name = "substreams-aptos-stats"
version = "0.1.0"
description = "Substream for gathering Aptos statistics"
edition = "2021"
repository = "https://github.com/streamingfast/substreams-aptos-stats"

[lib]
crate-type = ["cdylib"]

[dependencies]
prost = { version = "0.11.0" }
prost-types = "0.11.0"
substreams = { version = "0.0.20" }

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
